--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <style>.ie-panel{display: none;background: #2f8daf; padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #ffffff; padding: 10px 0;box-shadow: 3px 3px 5px 0 
+      rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
     <div class="preloader">
@@ -133,7 +134,7 @@
       </section> -->
 
       <section class="section text-center services">
-        <h2>I nostri servizi</h2>
+        <h2 class="text-gray-600"> I nostri servizi</h2>
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="service-item">
@@ -172,8 +173,7 @@
 
       <section class="section section-lg bg-default text-center">
         <div class="container">
-          <h6 class="text-gray-600"></h6>
-          <h2>I nostri video</h2>
+          <h2 class="text-gray-600">I nostri video</h2>
           <!--Bootstrap tabs-->
           <div class="tabs-custom tabs-vertical tabs-video" id="tabs-2">
             <!--Tab panes-->
@@ -268,8 +268,7 @@
 
     <section class="section bg-default text-center" data-lightgallery="group">
       <div class="container">
-         
-       <h2>Le nostre foto</h2>
+       <h2 class="text-gray-600">Le nostre foto</h2>
         <div class="row no-gutters">
             <div class="col-lg-3 col-sm-6">
               <div class="thumbnail-classic">
