--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: 
+      both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
     <div class="preloader">
@@ -31,7 +32,8 @@
       <header class="section page-header">
         <!--RD Navbar-->
         <div class="rd-navbar-wrap" style="position: absolute">
-          <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static" data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
+          <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" 
+          data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static" data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
             <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
             <div class="rd-navbar-main-outer">
               <div class="rd-navbar-main">
@@ -96,7 +98,7 @@
                 </div>
                 <h4 class="box-about-post-title">La nostra storia</h4>
 
-                <p> La nostra avventura inizia nel 1997 da un'iniziativa di don Gianluca : sotto la guida di Bianca marina si forma un piccolo coro che anima la messa della domenica mattina.
+                <p> La nostra avventura inizia nel 1997 da un'iniziativa di don Gianluca: sotto la guida di Bianca Marina si forma un piccolo coro che anima la messa della domenica mattina.
                   Nel 2001 il coro ha iniziato a prendere forma unendo ragazzi di tutte le età: dalle elementari fino agli adolescenti. E' così che nasce ufficialmente il "Coro Su Ali d'Aquila" 
                   diretto da Bianca Marina Di Luca Cardillo ed Elisabetta Mantegazza.
                   Con il passare del tempo, la fascia d'età si è ampliata arrivando a unire giovani ed adulti per un totale di 60 elementi.</p>
@@ -192,7 +194,7 @@
 
 
       <section class="section text-center services">
-        <h3>Unisciti a noi!</h3>
+        <h2 class="text-gray-600">Unisciti a noi!</h2>
         <div class="row">
           <div class="col-lg-4 col-sm-12">
               <div class="service-item">
@@ -205,8 +207,9 @@
               </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <h6 class="service-item "> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
-                che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?</h6>
+            <p class="service-item "> Se apprezzi la musica e i canti che eseguiamo, e magari ti piace anche cantare o suoni uno strumento o pensi 
+                che si potrebbe fare di più per animare la Santa Messa, e sicuramente hai ragione: allora cosa aspetti?
+            </p>
               <div class="download-button">
                 <a class="button button-outline button-sm" 
                 href="https://drive.google.com/uc?export=download&id=1qTLy3T5CjzVzTMle1wq7t5NY4an3VvWT">Scarica il modulo</a>
@@ -239,7 +242,7 @@
             </div>
 
             <div class="col-lg-6">
-              <h2>Non smettere mai di cantare!</h2>
+              <h2 class="text-gray-600">Non smettere mai di cantare!</h2>
               <!--Bootstrap tabs-->
               <div class="tabs-albums" id="tabs-1">
                 <!--Nav tabs-->
