change footer and favicon

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="images/favicon-3.ico" type="image/x-icon">
+    <link rel="icon" href="images/logo.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700%7COpen+Sans:400,600,700%7CSource+Code+Pro:300,400,500,600,700,900%7CNothing+You+Could+Do%7CPoppins:400,500">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -411,9 +411,9 @@
               
               <div class="col-sm-3 text-center">
                 <div class="footer-contact">
-                  <a href="contacts.html">
+                  <a href="mailto:c.sualidaquila@g.mail.com">
                     <div class="icon novi-icon mdi mdi-email-outline"></div>
-                    Contattaci
+                    c.sualidaquila@mail.com
                   </a>
                 </div>
               </div>
@@ -422,7 +422,7 @@
                 <p class="footer-text">
                   Non siamo una corale professionale, né puntiamo ad esserlo: siamo un gruppo che coltiva la musica e la liturgia.
                   Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
-                  Perché cantare non è solo eseguire note: è anche pregare due volte.
+                  Perché cantare non è solo eseguire note, ma anche stare insieme!
                 </p>
               </div>
 
