update contact form

--- a/testi.html
+++ b/testi.html
@@ -495,10 +495,12 @@
             </div>
         
             <div class="row row-15">
+              <div class="col-sm-6 text-center">
               <p class="footer-copy">
                 Coro Su Ali d'Aquila © <span class="copyright-year"></span> -  
                 All Rights Reserved – Design by TemplateMonster & Martina Monti
               </p>
+              </div>
             </div>
           </div>
         </footer>
