fix header contact + change image contact

--- a/archive.html
+++ b/archive.html
@@ -421,9 +421,9 @@
 
             <div class="col-sm-6 text-center">
               <p class="footer-text">
-                Non siamo una corale professionale, né puntiamo ad esserlo: siamo un gruppo che coltiva la musica e la liturgia.
-                Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
-                Perché cantare non è solo eseguire note, ma anche stare insieme!
+                Non siamo una corale professionale, né puntiamo ad esserlo, ma siamo un gruppo nato dalla gioia di condividere la liturgia e la musica.
+                  Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
+                  Perché cantare non è solo eseguire note, ma anche stare insieme!
               </p>
             </div>
 
