--- a/contacts.html
+++ b/contacts.html
@@ -29,24 +29,34 @@
 
 <div class="page">
   <header class="section page-header">
+    <!--RD Navbar-->
     <div class="rd-navbar-wrap" style="position: absolute">
-      <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed">
+      <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" 
+      data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static" data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
         <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
         <div class="rd-navbar-main-outer">
           <div class="rd-navbar-main">
+            <!--RD Navbar Panel-->
             <div class="rd-navbar-panel">
+              <!--RD Navbar Toggle-->
               <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
+              <!--RD Navbar Brand-->
               <div class="rd-navbar-brand">
-                <a class="brand" href="index.html"><img src="images/image-1.png" alt="" width="58" height="26"/></a>
+                <!--Brand--><a class="brand" href="index.html">
+                  <img src="images/image-1.png" alt="" width="58" height="26"/></a>
               </div>
             </div>
             <div class="rd-navbar-main-element">
               <div class="rd-navbar-nav-wrap">
                 <ul class="rd-navbar-nav">
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a></li>
-                  <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatti</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a>
+                  </li>
+                  <!--<li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
+                  </li> -->
+                  <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contatti</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -54,7 +64,7 @@
               <ul class="socialite-list">
                 <li><a class="icon novi-icon socialite fa-facebook" href="https://www.facebook.com/profile.php?id=100032786907194" target="_blank"></a></li>
                 <li><a class="icon novi-icon socialite fa-envelope" href="mailto:c.sualidaquila@gmail.com"></a></li>
-                <li><a class="icon novi-icon socialite fa-instagram" href="https://www.instagram.com/corosualidaquila" target="_blank"></a></li>
+                <li><a class="icon novi-icon socialite fa-instagram" href="https://www.instagram.com/corosualidaquila?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"></a></li>
               </ul>
             </div>
           </div>
@@ -64,7 +74,7 @@
   </header>
 
   <!-- Breadcrumbs -->
-  <section class="breadcrumbs-custom bg-image context-dark" style="background-image: url('images/images.jpeg');">
+  <section class="breadcrumbs-custom bg-image context-dark" style="background-image: url('images/images-3.jpeg');">
     <div class="container">
       <h2 class="breadcrumbs-custom-title">Contatti</h2>
     </div>
@@ -150,7 +160,7 @@
 
           <div class="col-sm-6 text-center">
             <p class="footer-text">
-              Non siamo una corale professionale, né puntiamo ad esserlo: siamo un gruppo che coltiva la musica e la liturgia.
+              Non siamo una corale professionale, né puntiamo ad esserlo, ma siamo un gruppo nato dalla gioia di condividere la liturgia e la musica.
               Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
               Perché cantare non è solo eseguire note, ma anche stare insieme!
             </p>
