--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">Chi siamo</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
-                      </li>
+                      <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
+                      </li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
                     </ul>
@@ -534,7 +534,7 @@
 
               <div class="col-sm-6 text-center">
                 <p class="footer-text">
-                  Non siamo una corale professionale, né puntiamo ad esserlo: siamo un gruppo che coltiva la musica e la liturgia.
+                  Non siamo una corale professionale, né puntiamo ad esserlo, ma siamo un gruppo nato dalla gioia di condividere la liturgia e la musica.
                   Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
                   Perché cantare non è solo eseguire note, ma anche stare insieme!
                 </p>
