--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
                       </li>
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="about.html">Chi siamo</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
-                      </li>
+                      <!--<li class="rd-nav-item"><a class="rd-nav-link" href="testi.html">Archivio testi</a>
+                      </li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contatti</a>
                       </li>
                     </ul>
@@ -89,6 +89,8 @@
           <li class="active">Chi siamo</li>
         </ul>
       </section>
+
+      
       <section class="section section-lg bg-default">
         <div class="container">
           <div class="row row-50 flex-md-row-reverse">
@@ -246,14 +248,14 @@
                 <div class="tabs-albums-select">
                   <h6 class="text-gray-600">Seleziona un anno</h6>
                   <ul class="nav nav-tabs">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-1-1" data-toggle="tab">2018</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-1" data-toggle="tab">2018</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2" data-toggle="tab">2024</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3" data-toggle="tab">2025</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-1-3" data-toggle="tab">2025</a></li>
                   </ul>
                 </div>
                 <!--Tab panes-->
                 <div class="tab-content">
-                  <div class="tab-pane fade show active" id="tabs-1-1">
+                  <div class="tab-pane fade" id="tabs-1-1">
                     <div class="jp-modern jp-player-init">
                       <div class="jp-jplayer"></div>
                       <div class="jp-audio jp-audio-0" role="application" aria-label="media player">
@@ -346,13 +348,23 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane fade" id="tabs-1-3">
+                  <div class="tab-pane fade show active" id="tabs-1-3">
                     <div class="jp-modern jp-player-init">
                       <div class="jp-jplayer"></div>
                       <div class="jp-audio jp-audio-2" role="application" aria-label="media player">
                         <ul class="jp-player-list">
-                          <li class="jp-player-list-item" data-jp-title="Bolingo Nwzambee" data-jp-mp3="audio/epifania/bolingo.mp3"></li>
-                          <li class="jp-player-list-item" data-jp-title="Piedad de mi" data-jp-mp3="audio/epifania/piedad-de-mi.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="A Betlemme di Giudea" data-jp-mp3="audio/Natale25/A betlemme di Giudea.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Bolingo Nwzambee" data-jp-mp3="audio/epifania25/bolingo.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Carol of the bells" data-jp-mp3="audio/Natale25/Carol of the bells.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Hark the heralds" data-jp-mp3="audio/Natale25/Hark the heralds.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Medley Sister Act" data-jp-mp3="audio/Natale25/Medley sister Act.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Noel Noel" data-jp-mp3="audio/Natale25/Noel Noel.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Oh happy day!" data-jp-mp3="audio/Natale25/Oh happy day.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Piedad de mi" data-jp-mp3="audio/epifania25/piedad-de-mi.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Santa Claus is coming to town!" data-jp-mp3="audio/Natale25/Santa claus is coming.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Smile - it's christmas day!" data-jp-mp3="audio/Natale25/Smile.mp3"></li>
+                          <li class="jp-player-list-item" data-jp-title="Venite fedeli" data-jp-mp3="audio/Natale25/Venite fedeli.mp3"></li>
+                          
                         <div class="jp-modern-interface">
                           <div class="jp-button jp-playpaus-button">
                             <button class="jp-btn jp-play" tabindex="0"></button>
@@ -420,7 +432,7 @@
 
               <div class="col-sm-6 text-center">
                 <p class="footer-text">
-                  Non siamo una corale professionale, né puntiamo ad esserlo: siamo un gruppo che coltiva la musica e la liturgia.
+                  Non siamo una corale professionale, né puntiamo ad esserlo, ma siamo un gruppo nato dalla gioia di condividere la liturgia e la musica.
                   Accompagniamo chi entra a scoprire la propria voce e a condividere questa passione.
                   Perché cantare non è solo eseguire note, ma anche stare insieme!
                 </p>
